[gd_scene load_steps=6 format=3 uid="uid://v5lwto3kifoo"]

[ext_resource type="Texture2D" uid="uid://dojb2emq2p7uf" path="res://assets/images/photo_2025-04-12_07-44-56.jpg" id="1_84r03"]
[ext_resource type="Script" uid="uid://bgd0csjya4onj" path="res://scenes/ui/components/main_menu.gd" id="1_lrhyv"]
[ext_resource type="FontFile" uid="uid://le2vdo2626vw" path="res://assets/fonts/Montserrat-Medium.ttf" id="2_lrhyv"]
[ext_resource type="AudioStream" uid="uid://ery4peqk8vl0" path="res://assets/music/Swamp Fever.mp3" id="4_7b3o0"]

[sub_resource type="LabelSettings" id="LabelSettings_7b3o0"]
font = ExtResource("2_lrhyv")
font_size = 70
font_color = Color(0, 0, 0, 1)
outline_size = 4
outline_color = Color(1, 0, 0, 1)
shadow_color = Color(0.956863, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lrhyv")

[node name="ImagenFondo" type="Sprite2D" parent="."]
position = Vector2(919, 362)
scale = Vector2(0.654968, 0.566016)
texture = ExtResource("1_84r03")

[node name="ColorRect" type="ColorRect" parent="ImagenFondo"]
offset_left = -559.0
offset_top = -643.0
offset_right = 560.0
offset_bottom = 647.0
color = Color(0.398664, 0, 0.0958132, 0.827451)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 560.0
offset_bottom = 724.0
color = Color(0, 0, 0, 1)

[node name="Título" type="Label" parent="."]
layout_mode = 0
offset_right = 555.0
offset_bottom = 267.0
text = "La Brasa 
de los Muertos"
label_settings = SubResource("LabelSettings_7b3o0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 223.0
offset_top = 333.0
offset_right = 352.0
offset_bottom = 390.0
text = "Jugar"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 223.0
offset_top = 447.0
offset_right = 352.0
offset_bottom = 505.0
text = "Salir
"

[node name="CreditsButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 24.0
offset_top = 674.0
offset_right = 97.0
offset_bottom = 705.0
text = "Créditos"

[node name="MusicButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 416.0
offset_top = 674.0
offset_right = 536.0
offset_bottom = 705.0
text = "Música On/Off"

[node name="Credits" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 560.0
offset_top = 97.0
offset_right = 1278.0
offset_bottom = 724.0
text = "UNQJAM 2025 - La Brasa De Los Muertos



Proyecto colaborativo de la mano de:
Sebastián 
Tomás 
Enrique 
Ivan 
Lucas 
Andrés 
Dora 
Ignacio 
Charlie 
Sebastián

Créditos:

Texturas del juego utilizadas bajo la licencia de libre uso
Imágenes de fondo cortesía del equipo de diseño
Sonidos y BGM utilizados bajo licencia de libre uso
Música del menú: Swamp Fever - L4D2




"
horizontal_alignment = 1

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7b3o0")
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Buttons/MusicButton" to="." method="_on_music_button_pressed"]
